Fixed 'lasts" typo.

--- a/items/iron-chisel.html
+++ b/items/iron-chisel.html
@@ -5,4 +5,4 @@ permalink: items/iron-chisel/
 item: chisel_iron
 title: Iron Chisel
 ---
-<p>Solid chisel that lates for a while but pales in comparison to its big brother the Diamond Chisel.</p>
+<p>Solid chisel that lasts for a while but pales in comparison to its big brother the Diamond Chisel.</p>
