Fixed 'has" typo.

--- a/items/stone-chisel.html
+++ b/items/stone-chisel.html
@@ -5,4 +5,4 @@ permalink: items/stone-chisel/
 item: chisel_stone
 title: Stone Chisel
 ---
-<p>Entry level chisel, have very limited uses.</p>
+<p>Entry level chisel, has very limited uses.</p>
