Fix verbiage and misspellings on Tips & Tricks.

--- a/tips.html
+++ b/tips.html
@@ -4,28 +4,28 @@ permalink: tips-and-tricks/
 layout: default
 ---
 
-<p>Chisels &amp; Bits has a lot of diffrent features that use useful in cutting down on how much time it takes to design your custom blocks, keep this in mind when your making something new theres usually more than one way to accomplish something.<p>
+<p>Chisels &amp; Bits has a lot of different features that use useful in cutting down on how much time it takes to design your custom blocks, keep this in mind when you're making something new there's usually more than one way to accomplish something.<p>
 
 <h3>Undo / Redo</h3>
-<p>You can undo most bit/chisel operations, creative block distruction included. These commands can be invaluable if your building something and accidently click on the wrong thing, or make a wrong move.</p>
+<p>You can undo most bit/chisel operations, creative block destruction included. These commands can be invaluable if your building something and accidentally click on the wrong thing, or make a wrong move.</p>
 
 <h3>Almost every mode and action has an optional keybind</h3>
 <p>This means that you can bind undo/redo, or specific modes to mouse buttons or keyboard keys allowing you to skip the radial menu and spend more time chiseling</p>
 
-<h3>Holding shift allows you to ignore the block boundries when placing a chiseled block.</h3>
-<p>This lets you combine diffrent parts of various blocks together and work with larger portions without having to build everything in one block.</p>
+<h3>Holding shift allows you to ignore the block boundaries when placing a chiseled block.</h3>
+<p>This lets you combine different parts of various blocks together and work with larger portions without having to build everything in one block.</p>
 
-<h3>Bits and Chisels have lots of diffrent modes</h3>
+<h3>Bits and Chisels has many different modes</h3>
 <p>Depending on what your doing one mode might be more useful than another, and remembers that the radial menu works for bits just as it works for chisels</p>
 
 <h3>The wrench can rotate around any axis.</h3>
-<p>If you use the wrench on a west face, the block will rotate around the east - west axis, its all about which face you click on.</p>
+<p>If you use the wrench on a west face, the block will rotate around the east - west axis, it's all about which face you click on.</p>
 
-<h3>The saw works on any symetrical block, allowing you to cut more then just simple chunks of one material</h3>
-<p>For instance you can make a pillar, then you can cut up a a pilar into 4 corners and apply it in new ways.</p>
+<h3>The saw works on any symmetrical block, allowing you to cut more than just simple chunks of one material</h3>
+<p>For instance you can make a pillar, then you can cut up a pillar into four corners and apply it in new ways.</p>
 
-<h3>You can duplicate positive patterns by crafting the pattern with a bag which contains the nessiary bits</h3>
-<p>This lets you quickly copy your work and make more of the diffrent parts you need when building allowing you to focus on the larger aspects rather then having to re-do the designs you have already completed.</p>
+<h3>You can duplicate positive patterns by crafting the pattern with a bag which contains the necessary bits</h3>
+<p>This lets you quickly copy your work and make more of the different parts you need when building allowing you to focus on the larger aspects rather than having to redo the designs you have already completed.</p>
 
 <h3>If you have a lot of the same type of chiseled block, but they won't stack you can craft them by themselves.</h3>
-<p>This removes any extra rotation, placement information from the block allowing you to stack more effectivly.</p>
+<p>This removes any extra rotation, placement information from the block allowing you to stack more effectively.</p>
