--- a/items/bit-tank.html
+++ b/items/bit-tank.html
@@ -5,4 +5,4 @@ permalink: items/bit-tank/
 item: bit_tank
 title: Bit Tank
 ---
-<p>The idea of sawing and chiseling water not make any sense too you? Well look no further than than the bit tank, allowing the conversion between fluid in an convenient tank form you can convert any fluid too and from its bit form.</p>
+<p>The idea of sawing and chiseling water not make any sense too you? Well look no further than the bit tank, allowing the conversion between fluid and bits via a convenient tank. You can convert any fluid too and from its bit form using it.</p>
