--- a/tips.html
+++ b/tips.html
@@ -29,3 +29,6 @@ layout: default
 
 <h3>If you have a lot of the same type of chiseled block, but they won't stack you can craft them by themselves.</h3>
 <p>This removes any extra rotation, placement information from the block allowing you to stack more effectively.</p>
+
+<h3>Are you a mod developer and want to export a model?</h3>
+<p>C&B includes a command /c&b.exportmodel which saves the item in your hand to the clipboard, so you can quickly drop it into your models swap out textures and your done. Keep in mind that more complicated models can be slow in Mincraft's normal rendering pipeline and if used as a normal block model you can't take advanatage of C&B's renderer, so keep face counts on the lower side.</p>
