Add /c&b.exportmodel to FAQ instead.

--- a/faq.html
+++ b/faq.html
@@ -38,3 +38,8 @@ layout: default
 	<li class="question">Help I have a bug? or I wish this mod had this cool feature!</li>
 	<li class="answer">Visit the <a href="https://github.com/AlgorithmX2/Chisels-and-Bits/issues">issue tracker</a>, ideas and bugs are welcome.</li>
 </ul>
+
+<ul class="faq">
+	<li class="question">Can I export my models to JSON?</li>
+	<li class="answer">C&B includes a command /c&b.exportmodel which saves the item in your hand to the clipboard, so you can quickly drop it into your models swap out textures and your done. Keep in mind that more complicated models can be slow in Mincraft's normal rendering pipeline and if used as a normal block model you can't take advanatage of C&B's renderer, so keep face counts on the lower side.</li>
+</ul>
