Controls. Also.. Words!

--- a/items/tape_measure.html
+++ b/items/tape_measure.html
@@ -5,4 +5,4 @@ permalink: items/tape-measure/
 item: tape_measure
 title: Tape Measure
 ---
-<p>Versatile Measuring tool for use with working with small and large projects.</p>
+<p>Versatile measuring tool for small and large projects.</p>
