Few Tweaks to the Tips.

--- a/tips.html
+++ b/tips.html
@@ -16,7 +16,7 @@ layout: default
 <p>This lets you combine different parts of various blocks together and work with larger portions without having to build everything in one block.</p>
 
 <h3>Bits and Chisels has many different modes</h3>
-<p>Depending on what your doing one mode might be more useful than another, and remembers that the radial menu works for bits just as it works for chisels</p>
+<p>Depending on what your doing one mode might be more useful than another, and remembers that the radial menu works for bits, postive designs, tape measures as well for chisels</p>
 
 <h3>The wrench can rotate around any axis.</h3>
 <p>If you use the wrench on a west face, the block will rotate around the east - west axis, it's all about which face you click on.</p>
@@ -25,7 +25,7 @@ layout: default
 <p>For instance you can make a pillar, then you can cut up a pillar into four corners and apply it in new ways.</p>
 
 <h3>You can duplicate positive patterns by crafting the pattern with a bag which contains the necessary bits</h3>
-<p>This lets you quickly copy your work and make more of the different parts you need when building allowing you to focus on the larger aspects rather than having to redo the designs you have already completed.</p>
+<p>This lets you quickly copy your work and make more of the different parts you need when building allowing you to focus on the larger aspects rather than having to redo the designs you have already completed, you can also use the postiive pattern's placment mode to skip the crafting step.</p>
 
 <h3>If you have a lot of the same type of chiseled block, but they won't stack you can craft them by themselves.</h3>
 <p>This removes any extra rotation, placement information from the block allowing you to stack more effectively.</p>
