--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <p>Well that's pretty broad, but its accurate, C&amp;B takes existing blocks in your game world and lets you manipulate them together to create new custom creations, sculpting, copying, sawing, rotating, measuring and building is all possible at a micro-scale.</p>
 
-<p>Along with providing basic decoration C&amp;B also optionally supports MC Multipart, which allows you to use C&amp;B in the same block space as other mods that are MCMP Compatable.</p>
+<p>Along with providing basic decoration C&amp;B also optionally supports <a href="https://minecraft.curseforge.com/projects/mcmultipart">MC Multipart</a>, which allows you to use C&amp;B in the same block space as other mods that are <a href="https://minecraft.curseforge.com/projects/mcmultipart">MCMP</a> Compatable.</p>
 
 <p>Are you lacking in materials? Need various shades to work with? Look no further than <a href="http://minecraft.curseforge.com/projects/flat-colored-blocks">Flat Colored Blocks</a></p>
 
