Update the wiki

--- a/blocks/chiseled-printer.html
+++ b/blocks/chiseled-printer.html
@@ -1,9 +1,9 @@
 ---
 layout: block
 category: blocks
-permalink: blocks/printer/
-block: printer
-title: Printer
+permalink: blocks/chiseled-printer/
+block: chiseled_printer
+title: Chiseled Printer
 ---
 <h4>Automation? Yes! Whoop! Whoop!</h4>
 <p>With the printer you can automate the creation of the bit blocks.</p>
