--- a/items/measuring_tape.html
+++ b/items/measuring_tape.html
@@ -2,7 +2,7 @@
 layout: item
 category: items
 permalink: items/tape-measure/
-item: tape_measure
-title: Tape Measure
+item: measuring_tape
+title: Measuring Tape
 ---
 <p>Versatile measuring tool for small and large projects.</p>
