Fix wrench page.

--- a/items/wrench.html
+++ b/items/wrench.html
@@ -2,8 +2,8 @@
 layout: item
 category: items
 permalink: items/wrench/
-item: sealant
-title: Sealant
+item: wrench
+title: Wrench
 ---
 <p>Allows you to perform modifications on chiseled blocks.</p>
 <p>Examples of these modifications are rotations and mirroring.</p>
